@@ -17,6 +17,7 @@
  * Added --hide 'mouse' option.
  * Added --highlight-dirs option.
  * Added --file-extensions to show filename extensions only.
+ * Added --user-filter REGEX option.
  * Allow --file-idle-time 0 (files will never expire).
  * Allow --start-position 'random' to set a random start position.
  * --log-command VCS replaces multiple --log-command-VCS options.
